# expertflow-ai

./: .gitignore  README.md  advanced_example.py  pyproject.toml  quick_start.py  simple_example.py  tutorial_app.py
.github/workflows/: publish.yml
agenticminds/: session.py
aghentic_minds/: __init__.py  memory.py  router.py  session.py  types.py  utils.py
aghentic_minds/llm/: base.py  gemini.py  mock.py
aghentic_minds/prompts/: __init__.py
aghentic_minds/prompts/experts/: custom_template.md
aghentic_minds/prompts/experts/default/: msg_writer_exp.md
aghentic_minds/prompts/experts/quick_start/: sales_expert.md  support_expert.md
aghentic_minds/prompts/orchestrator/: custom_orch_template.md
aghentic_minds/prompts/orchestrator/default/: orchestrator_PM.md
aghentic_minds/prompts/orchestrator/quick_start/: orchestrator.md
debug-cache/: user_123_debug.json
expertflow/: __init__.py  cli.py  router.py  session.py  utils.py
expertflow/llm/: __init__.py  base.py  gemini.py  mock.py
test_init_project/: main.py
test_init_project/prompts/experts/: task_planner.md
tests/: sanity_check.py  test_agents.py  test_basic.py  test_garvis_orchestrator.py  test_memory.py  test_mock_arch.py  test_router.py  test_session.py
